#32 nombre de archivo de test actualizado en iv.yaml

--- a/iv.yaml
+++ b/iv.yaml
@@ -3,4 +3,4 @@ entidad: src/scraping.ts
 automatizar:
   fichero: package.json
   orden: bun run
-test: src/basic_test.ts
+test: tests/basic_test.ts
